# pysleepme

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example.py  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
docs/: api.md  installation.md  usage.md
pysleepme/: __init__.py  const.py  exceptions.py  pysleepme.py
pysleepme/py_sleep_me_api/: __init__.py  client.py  types.py
pysleepme/py_sleep_me_api/api/device_control/: get_devices.py  get_devices_device_id.py  patch_devices_device_id.py
pysleepme/py_sleep_me_api/models/: __init__.py  device_list_item.py  dock_pro_control.py  dock_pro_control_display_temperature_unit.py  dock_pro_control_thermal_control_status.py  status.py  status_about.py  status_control.py  status_status.py  status_update_response.py
tests/: __init__.py  conftest.py  test_get_devices.py  test_get_devices_by_id.py  test_pysleepme.py
